[package]
name = "minifb_tile_base"
version = "0.1.1"
edition = "2021"
exclude = ["main.rs"]
repository = "https://github.com/ThatBooRadley/minifb_tile_base"
description = "A basic tile updater for minifb"
license-file = "LICENSE"

[profile.dev]
overflow-checks = false

[dependencies]
minifb = "0.27.0"
rayon = "1.10.0"

[features]
parallel = ["rayon"]
