[package]
name = "minifb_tile_base"
version = "0.2.2"
edition = "2021"
exclude = ["main.rs"]
repository = "https://github.com/ThatBooRadley/minifb_tile_base"
description = "A basic tile updater for minifb"
license-file = "LICENSE"

[profile.dev]
overflow-checks = false

[dependencies]
minifb = "0.27.0"
